Feat/api updates (#83)
* fixed validation error during create tenant and updated env sample to reflect latest env vars

* removed auth check as this method pulls tenants for users

* update to tenant model - added description field, db migrations, repo updates, validation updates, docs updates

* updated create tenant to check for conflict error and return it as such

* updates to validaiton and api doc to support latest getTenant

* added regex to tenant name to control input

* updated regex to only disallow leading and / or trailing spaces

* added expand parameter to getusertenants method to return users and roles if required.

* updated validations and api documentation for getusertenants

* removed unnecessary role param check

* updated getTenant to return idir username instead of id for createdBy

* removed check tenant access mw call for sso user search

* initial tests - basic setup and tests for creating a tenant - more to follow, renamed old tests so they dont execute

* add user to tenant - basic test

* negative test for invalid role update to a user added to a tenant

* negative test to fail if user already exists in tenant

* commented out unused methods in routes to ensure they arent accidentally accessed

* negative test for add user to tenant with invalid tenant id

* first validation test for add tenant user - added new mw invoke to handle validation error

* negative validation test for create tenant

* happy test for get tenants for a user by ssouser id

* negative test to return empty array of tenants for invalid sso users

* negative validation test for get user tenants

* get tenant users - positive test and negative validation test

* additonal test case to return empty user array for invalid tenant id

* new tests for assign user roles, edits to few ids to ensure anonmyity

* tests for unassign user role - postive and negative tests. update to controller to account for conflict error for unassign

* get tenant positve and -ve tests. expand
