# backend/src/common/routes.constants.ts
@@ -12,4 +12,5 @@ export class RoutesConstants {
     public static SEARCH_BC_GOV_IDIR_USERS = '/v1/users/bcgovssousers/idir/search'
     public static GET_TENANT = '/v1/tenants/:tenantId'
     public static GET_ROLES_FOR_SSO_USER = '/v1/tenants/:tenantId/ssousers/:ssoUserId/roles'
-  }
+    public static UPDATE_TENANT = '/v1/tenants/:tenantId'
+}
